--- a/AimpLyricsPlugin/LyricWindow.xaml
+++ b/AimpLyricsPlugin/LyricWindow.xaml
@@ -9,13 +9,13 @@
         Height="50" Width="1000">
     <Grid>
         <Grid x:Name="grid" VerticalAlignment="Center" HorizontalAlignment="Center" Background="Transparent" MouseLeftButtonDown="Grid_MouseLeftButtonDown"
-              MouseEnter="Grid_MouseEnter" MouseLeave="Grid_MouseLeave" MinWidth="10">
-            <TextBlock x:Name="t1" FontSize="22.5pt">
+              MouseEnter="Grid_MouseEnter" MouseLeave="Grid_MouseLeave">
+            <TextBlock x:Name="t1" FontSize="22.5pt" Margin="5">
                 <TextBlock.Effect>
                     <BlurEffect Radius="8"/>
                 </TextBlock.Effect>
             </TextBlock>
-            <TextBlock x:Name="t2" FontSize="22.5pt" Foreground="#FFE2FFB7"/>
+            <TextBlock x:Name="t2" FontSize="22.5pt" Foreground="#FFE2FFB7" Margin="5"/>
         </Grid>
     </Grid>
 </Window>
